fix console paging

--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "apexcharts": "^3.45.0",
     "axios": "^1.6.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "pinia": "^2.1.6"
+    "pinia": "^2.1.6",
+    "vue3-apexcharts": "^1.4.4"
   }
 }
