--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "node server/index.js",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "proxy": "node server/index.js",
     "start": "pm2 start .output/server/index.mjs --name sitasi-landing"
   },
   "devDependencies": {
@@ -21,7 +20,6 @@
     "aos": "^2.3.4",
     "apexcharts": "^3.45.0",
     "axios": "^1.6.2",
-    "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pinia": "^2.1.6",
