--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nuxt": "^3.8.2"
   },
   "dependencies": {
+    "@nuxt/http": "^0.6.4",
     "@nuxtjs/tailwindcss": "^6.10.1",
     "@pinia/nuxt": "^0.4.11",
     "aos": "^2.3.4",
